@startuml

class Employee {

    - String name
    - int citizenCardNumber
    - int taxNumber
    - String address
    - String emailAddress
    - int telephoneNumber
    - Role role
    - Agency agency


}

class RegeisterEmployeeUI {

    - controller


}

class RegeisterEmployeeController {

    - employeeRepository
    + getRolesAsList()
    + getAgency()
    + createEmployee()
}

class EmployeeRepository {

    + employeeList
    + addEmployee(employee)
    + validateEmployee(employee)
    + getEmployeeList()
    + getEmployee(employeeID)
    + getEmployeeListAsString()
    + showEmployee()
}

Enum Role {

    ADMINISTRATOR
    MANAGER
    AGENT
    + asString()
    + getRolesAsList()
    + getRoleByID(position)
}

Enum Agency {

    AGENCY1
    AGENCY2
    AGENCY3
    + asString()
    + getAgencyAsList()
    + getRolebyID(position)
}

Interface Runnable {
    + run()
}

Runnable -left-|> RegeisterEmployeeUI
RegeisterEmployeeUI ..> RegeisterEmployeeController
RegeisterEmployeeController ..> Employee
Employee --* Role
Employee --* Agency
Employee --> EmployeeRepository


@enduml